fixed header shadow on iphone

--- a/app/assets/stylesheets/iphone.css.scss
+++ b/app/assets/stylesheets/iphone.css.scss
@@ -128,9 +128,10 @@ xxx@xxx.xxx debug_border;
 			// big green page banner (large tab)
 			// ---------------------------
 			header {
+				width: 99%;
 
 				box-shadow: none;
-xxx@xxx.xxx left_tab_shadow;
+xxx@xxx.xxx left_tab_shadow;				
 
 
 				// --------------------------------
